# google-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-google-api-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-google-api-sdk/checklists/: requirements.md
specs/001-google-api-sdk/contracts/: public-api.md
src/google_sdk/: __init__.py  _client.py  _config.py  _pagination.py  exceptions.py
src/google_sdk/_models/: base.py
src/google_sdk/_transport/: __init__.py  _base.py  async_transport.py  rate_limiter.py  retry.py  sync_transport.py
src/google_sdk/auth/: __init__.py  oauth.py  refresh_token.py  scopes.py  service_account.py  token_store.py
src/google_sdk/services/: __init__.py  _base.py
src/google_sdk/services/calendar/: client.py  (+2 more)
tests/: README.md  conftest.py  factories.py
tests/benchmarks/: bench_pagination_memory.py  bench_transport_overhead.py
tests/contract/: test_auth_contract.py  test_calendar_contract.py  test_drive_contract.py  test_meet_contract.py
tests/integration/: conftest.py  test_calendar.py  test_drive.py  test_meet.py  test_workflows.py
tests/unit/: test_base_service_errors.py  test_client.py  test_config.py  test_exceptions.py  test_pagination.py  test_sync_async_parity.py
tests/unit/test_auth/: test_oauth.py  test_refresh_token.py  test_resolve.py  test_scopes.py  test_service_account.py  test_token_store.py
tests/unit/test_models/: test_base.py
tests/unit/test_transport/: test_rate_limiter.py  test_retry.py  test_transport_classes.py
(+15 files in other folders)
