[project]
name = "google-sdk"
version = "0.1.0"
description = "Python SDK for Google Drive, Calendar, and Meet APIs"
readme = "README.md"
authors = [
    { name = "Timothy Hwang", email = "dev@timhwang.io" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "vcrpy>=6.0",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live tests against real Google APIs (opt-in via --integration)",
]
